Update with h2 configuration. It can easy spring data jpa integration.

--- a/master-screen/master-screen-repository/src/main/resources/application.properties
+++ b/master-screen/master-screen-repository/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.jpa.database-platform=com.springboot.sqlite.SQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-
-spring.datasource.url = jdbc:sqlite:sqlitesample.db
-spring.datasource.driver-class-name = org.sqlite.JDBC
-
-spring.datasource.username = admin
-spring.datasource.password = admin
+spring.datasource.url=jdbc:h2:mem:jpadb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=mypass
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
