--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-README.md
+../README.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -14,7 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+master-screen/.idea
 *.iws
 *.iml
 *.ipr
