--- a/master-screen/master-screen-repository/pom.xml
+++ b/master-screen/master-screen-repository/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
+        <org.projectlombok.version>1.18.16</org.projectlombok.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${org.projectlombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
