--- a/master-screen/master-screen-controller/pom.xml
+++ b/master-screen/master-screen-controller/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.isthar</groupId>
-            <artifactId>master-screen-service</artifactId>
+            <artifactId>master-screen-repository</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
