--- a/master-screen/pom.xml
+++ b/master-screen/pom.xml
@@ -2,17 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 	<packaging>pom</packaging>
 
-
-	<groupId>com.isthar</groupId>
+	<groupId>thot</groupId>
 	<artifactId>master-screen</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>master-screen</name>
@@ -20,10 +12,10 @@
 
 
 	<modules>
-		<module>master-screen-boot</module>
-		<module>master-screen-repository</module>
-		<module>master-screen-service</module>
-		<module>master-screen-controller</module>
+		<module>thot-repository</module>
+		<module>thot-controller</module>
+		<module>thot-boot</module>
 	</modules>
+
 
 </project>
