--- a/master-screen/pom.xml
+++ b/master-screen/pom.xml
@@ -7,9 +7,8 @@
 	<groupId>thot</groupId>
 	<artifactId>master-screen</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>master-screen</name>
+	<name>thot</name>
 	<description>Character rol application</description>
-
 
 	<modules>
 		<module>thot-repository</module>
