--- a/backend/thot-controller/pom.xml
+++ b/backend/thot-controller/pom.xml
@@ -33,11 +33,17 @@
             <version>1.18.10</version>
             <scope>provided</scope>
         </dependency>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>1.4.2.Final</version>
+            </dependency>
         <dependency>
             <groupId>thot</groupId>
             <artifactId>thot-repository</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 
 </project>
