--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,6 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.5.3</version>
+		<relativePath/>
+	</parent>
+
 	<groupId>thot</groupId>
 	<artifactId>master-screen</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -11,10 +18,28 @@
 	<description>Character rol application</description>
 
 	<modules>
+		<module>thot-boot</module>
 		<module>thot-repository</module>
 		<module>thot-controller</module>
-		<module>thot-boot</module>
 	</modules>
+
+	<properties>
+		<com.google.cloud.tools.jib-maven-plugin.version>2.4.0</com.google.cloud.tools.jib-maven-plugin.version>
+	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.10</version>
+				<scope>provided</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<build>
+	</build>
 
 
 </project>
