--- a/backend/thot-boot/pom.xml
+++ b/backend/thot-boot/pom.xml
@@ -4,30 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>thot</groupId>
+        <artifactId>master-screen</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>thot-boot</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <groupId>thot</groupId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <com.google.cloud.tools.jib-maven-plugin.version>2.4.0</com.google.cloud.tools.jib-maven-plugin.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -43,8 +36,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${com.google.cloud.tools.jib-maven-plugin.version}</version>
                 <configuration>
-
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -53,10 +46,12 @@
                     </excludes>
                 </configuration>
             </plugin>
+
             <!-- Docker build -->
-            <plugin>
+     <!--       <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
+                <version>${com.google.cloud.tools.jib-maven-plugin.version}</version>
                 <configuration>
                     <to>
                         <image>gcr.io/distroless/java:11</image>
@@ -69,28 +64,8 @@
                         <mainClass>com.isthar.masterscreen.ThotApplication</mainClass>
                     </container>
                 </configuration>
-            </plugin>
+            </plugin> -->
             <!-- /Docker build -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <release>${java.version}</release>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>1.4.2.Final</version>
-                        </path>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 </project>
