--- a/backend/thot-controller/pom.xml
+++ b/backend/thot-controller/pom.xml
@@ -4,14 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>thot</groupId>
+        <artifactId>master-screen</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>thot-controller</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <groupId>thot</groupId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -30,14 +28,12 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.10</version>
-            <scope>provided</scope>
         </dependency>
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct</artifactId>
-                <version>1.4.2.Final</version>
-            </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.4.2.Final</version>
+        </dependency>
         <dependency>
             <groupId>thot</groupId>
             <artifactId>thot-repository</artifactId>
