--- a/backend/thot-boot/pom.xml
+++ b/backend/thot-boot/pom.xml
@@ -5,17 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>thot</groupId>
-        <artifactId>master-screen</artifactId>
+        <artifactId>root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>thot-boot</artifactId>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <com.google.cloud.tools.jib-maven-plugin.version>2.4.0</com.google.cloud.tools.jib-maven-plugin.version>
-    </properties>
+    <name>Thot-boot</name>
 
     <dependencies>
         <dependency>
