--- a/backend/thot-controller/pom.xml
+++ b/backend/thot-controller/pom.xml
@@ -5,16 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>thot</groupId>
-        <artifactId>master-screen</artifactId>
+        <artifactId>root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>thot-controller</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
+    <artifactId>thot-controller</artifactId>
+    <name>Thot-controller</name>
 
     <dependencies>
         <dependency>
@@ -30,16 +26,15 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
-        </dependency>
-        <dependency>
             <groupId>thot</groupId>
             <artifactId>thot-repository</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.4.2.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
