--- a/backend/thot-repository/pom.xml
+++ b/backend/thot-repository/pom.xml
@@ -5,10 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>thot</groupId>
-        <artifactId>master-screen</artifactId>
+        <artifactId>root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <version>1.0.0-SNAPSHOT</version>
+
     <artifactId>thot-repository</artifactId>
 
     <properties>
@@ -17,16 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <version>1.50.5</version>
-        </dependency>
-        <dependency>
-            <groupId>cz.jirutka.spring</groupId>
-            <artifactId>embedmongo-spring</artifactId>
-            <version>1.3.1</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
