--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -35,7 +35,16 @@
 				<version>1.18.10</version>
 				<scope>provided</scope>
 			</dependency>
-
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>1.4.2.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
+				<version>3.0.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
