--- a/backend/thot-controller/pom.xml
+++ b/backend/thot-controller/pom.xml
@@ -30,10 +30,20 @@
             <artifactId>thot-repository</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <!-- Mapstruct  -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
+        </dependency>
+        <!-- Spring fox  -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+        <!-- Spring validator  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 
