--- a/backend/thot-boot/pom.xml
+++ b/backend/thot-boot/pom.xml
@@ -56,7 +56,7 @@
                         </tags>
                     </to>
                     <container>
-                        <mainClass>com.isthar.masterscreen.ThotApplication</mainClass>
+                        <mainClass>ThotApplication</mainClass>
                     </container>
                 </configuration>
             </plugin> -->
