--- a/backend/thot-controller/pom.xml
+++ b/backend/thot-controller/pom.xml
@@ -40,6 +40,10 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
         <!-- Spring validator  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
