--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -89,6 +89,11 @@
 						<artifactId>mapstruct-processor</artifactId>
 						<version>${org.mapstruct.mapstruct.version}</version>
 					</path>
+					<path>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+						<version>${org.projectlombok.lombok.version}</version>
+					</path>
 				</annotationProcessorPaths>
 			</configuration>
 		</plugin>
